LIME-2034 Upgrade to Java 25 + Gradle 9.4.1, remove Lombok, modernise build and acceptance tests
Build & Tooling
- Upgrade from Java 17 to Java 25 (Corretto) and Gradle 8 to 9.4.1
- Introduce Gradle version catalog (libs.versions.toml) for centralised dependency management
- Move all subproject dependency declarations from inline strings to catalog references
- Consolidate duplicated build boilerplate (JaCoCo, test logging, buildZip) into root build.gradle conventions
- Add AC_TEST_ONLY env var to settings.gradle to allow acceptance-tests to build standalone
- Remove acceptance-tests' own gradle wrapper, settings.gradle, and .sdkmanrc (now uses root)
- Update .sdkmanrc, GitHub Actions workflows to use java-version-file and Corretto distribution
- Bump SAM CLI to 1.157.1, pre-commit hooks, and checkov versions
- Add .hadolint.yaml and hadolint pre-commit hook for Dockerfile linting

Lombok Removal
- Remove Lombok entirely (lombok.config, compileOnly/annotationProcessor deps)
- Replace @Getter, @UtilityClass, @NoArgsConstructor(Lombok) with explicit Java code
- Replace @Data-style classes in lib-dvla with Java records (DvlaPayload, TokenRequestPayload,
  TokenResponse, DriverMatchAPIResponse, DriverMatchErrorResponse, DriverMatchServiceResult,
  RequestHeaderKeys, Errors, etc.)
- Add @Serial and serialVersionUID to all exception classes

Limeade Library Migration
- Replace local Strategy enum, LoggingSupport, SleepHelper, StopWatch, HTTPReply, and
  HTTPConnectionKeepAliveStrategyFactory with equivalents from limeade library
- Replace @ExcludeFromGeneratedCoverageReport with limeade annotations
  (@ExcludeClassFromGeneratedCoverageReport, @ExcludeConstructorFromGeneratedCoverageReport)

Code Quality
- Fix code smells: unused variables, raw types, deprecated API usage (new URL -> URI.create().toURL())
- Replace mutable test field naming (TEST_LIST -> testList) to follow conventions
- Rename validateIntegerRangeData to validateIntegerRangeDataNullIsFail with null handli